kind/minio/virtualservice-minio-console.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: minio-console
spec:
  gateways:
    - istio-system/ingress
  hosts:
    - minio-console.127.0.0.1.sslip.io
  http:
    - route:
        - destination:
            host: minio-console.minio.svc.cluster.local
            port:
              number: 9001
